--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                     podcasters, musicians, and creators. Take your content to the next level.</p>
             </div>
             <div class="text-center mt-5 flex flex-wrap items-center justify-center">
-                <a href="#" class="text-lg font-medium uppercase text-[#ad9970] mr-4">learn more ></a>
+                <a href="#" class="text-md font-medium uppercase text-[#ad9970] mr-4">learn more ></a>
                 <a href="#" class="text-lg bg-[#ad9970] px-4 py-2 rounded-full font-medium text-white">BUY NOW</a>
             </div>
         </div>
@@ -247,7 +247,7 @@
                     podcasters, musicians, and creators. Take your content to the next level.</p>
             </div>
             <div class="text-center mt-5 flex flex-wrap items-center justify-center">
-                <a href="#" class="text-lg font-medium uppercase text-[#ad9970] mr-4">learn more ></a>
+                <a href="#" class="text-md font-medium uppercase text-[#ad9970] mr-4">learn more ></a>
                 <a href="#" class="text-lg bg-[#ad9970] px-4 py-2 rounded-full font-medium text-white">BUY NOW</a>
             </div>
         </div>
@@ -271,7 +271,7 @@
                     pro in seconds.</p>
             </div>
             <div class="text-center mt-5 flex flex-wrap items-center justify-center">
-                <a href="#" class="text-lg font-medium uppercase text-[#ad9970] mr-4">learn more ></a>
+                <a href="#" class="text-md font-medium uppercase text-[#ad9970] mr-4">learn more ></a>
                 <a href="#" class="text-lg bg-[#ad9970] px-4 py-2 rounded-full font-medium text-white">BUY NOW</a>
             </div>
         </div>
@@ -343,7 +343,7 @@
                     podcasters, musicians, and creators. Take your content to the next level.</p>
             </div>
             <div class="text-center mt-5 flex flex-wrap items-center justify-center">
-                <a href="#" class="text-lg font-medium uppercase text-[#ad9970] mr-4">learn more ></a>
+                <a href="#" class="text-md font-medium uppercase text-[#ad9970] mr-4">learn more ></a>
                 <a href="#" class="text-lg bg-[#ad9970] px-4 py-2 rounded-full font-medium text-white">BUY NOW</a>
             </div>
         </div>
@@ -393,7 +393,7 @@
                 <p class="text-lg text-center p-3">We explore the difference between large- and small-diaphragm
                     condenser microphones, and what each is best used for.</p>
                 <a href="#"
-                    class="px-4 mt-6 py-2 text-lg md:text-xl bg-[#ad9970] text-white rounded-full uppercase">learn
+                    class="px-4 mt-6 py-2 text-md md:text-xl bg-[#ad9970] text-white rounded-full uppercase">learn
                     more</a>
             </div>
 
@@ -404,7 +404,7 @@
                 <p class="text-lg text-center p-3">Learn more about the different types of condenser mics, how they work
                     and the best applications for using them.</p>
                 <a href="#"
-                    class="px-4 mt-6 py-2 text-lg md:text-xl bg-[#ad9970] text-white rounded-full uppercase">learn
+                    class="px-4 mt-6 py-2 text-md md:text-xl bg-[#ad9970] text-white rounded-full uppercase">learn
                     more</a>
             </div>
 
@@ -414,7 +414,7 @@
                 <img src="./images/11.jpg" alt="">
                 <p class="text-lg text-center p-3">Firmware version 1.0.7 includes key feature additions, such as custom
                     routing for USB and Bluetooth outputs, and more.</p>
-                <a href="#" class="px-4 mt-6 py-2 text-lg md:text-xl bg-[#ad9970] text-white rounded-full uppercase">learn
+                <a href="#" class="px-4 mt-6 py-2 text-md md:text-xl bg-[#ad9970] text-white rounded-full uppercase">learn
                     more</a>
             </div>
 
@@ -423,7 +423,7 @@
                 </p>
                 <img src="./images/22.jpg" alt="">
                 <p class="text-lg text-center p-3">The world’s most powerful all-in-one audio solution for content creators is now available worldwide.v</p>
-                <a href="#" class="px-4 mt-6 py-2 text-lg md:text-xl bg-[#ad9970] text-white rounded-full uppercase">learn
+                <a href="#" class="px-4 mt-6 py-2 text-md md:text-xl bg-[#ad9970] text-white rounded-full uppercase">learn
                     more</a>
             </div>
 
