text wrap problem solving

--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
                 </p>
                 <img src="./images/22.jpg" alt="">
                 <p class="text-lg text-center p-3">The world’s most powerful all-in-one audio solution for content creators is now available worldwide.v</p>
-                <a href="#" class="px-4 mt-6 py-2 text-md md:text-xl bg-[#ad9970] text-white rounded-full uppercase">learn
+                <a href="#" class="px-4 mt-6 py-2 text-[10px] whitespace-nowrap md:text-xl bg-[#ad9970] text-white rounded-full uppercase">learn
                     more</a>
             </div>
 
