solving btn problem

--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                 <p class="text-lg text-center p-3">We explore the difference between large- and small-diaphragm
                     condenser microphones, and what each is best used for.</p>
                 <a href="#"
-                    class="px-4 mt-6 py-2 text-md md:text-xl bg-[#ad9970] text-white rounded-full uppercase">learn
+                    class="px-4 mt-6 py-2 text-md md:text-xl mb-4 whitespace-nowrap bg-[#ad9970] text-white rounded-full uppercase">learn
                     more</a>
             </div>
 
@@ -404,7 +404,7 @@
                 <p class="text-lg text-center p-3">Learn more about the different types of condenser mics, how they work
                     and the best applications for using them.</p>
                 <a href="#"
-                    class="px-4 mt-6 py-2 text-md md:text-xl bg-[#ad9970] text-white rounded-full uppercase">learn
+                    class="px-4 mt-6 py-2 text-md md:text-xl bg-[#ad9970] text-white rounded-full uppercase mb-4 whitespace-nowrap">learn
                     more</a>
             </div>
 
@@ -423,7 +423,7 @@
                 </p>
                 <img src="./images/22.jpg" alt="">
                 <p class="text-lg text-center p-3">The world’s most powerful all-in-one audio solution for content creators is now available worldwide.v</p>
-                <a href="#" class="px-4 mt-6 py-2 text-[10px] whitespace-nowrap md:text-xl bg-[#ad9970] text-white rounded-full uppercase">learn
+                <a href="#" class="px-4 mt-6 py-2 text-[10px] mb-4 whitespace-nowrap md:text-xl bg-[#ad9970] text-white rounded-full uppercase">learn
                     more</a>
             </div>
 
