uhh i solved it out

--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
                 <img src="./images/11.jpg" alt="">
                 <p class="text-lg text-center p-3">Firmware version 1.0.7 includes key feature additions, such as custom
                     routing for USB and Bluetooth outputs, and more.</p>
-                <a href="#" class="px-4 mt-6 py-2 text-md md:text-xl bg-[#ad9970] text-white rounded-full uppercase">learn
+                <a href="#" class="px-4 mt-6 py-2 text-md md:text-xl bg-[#ad9970] text-white rounded-full uppercase mb-4 whitespace-nowrap">learn
                     more</a>
             </div>
 
@@ -423,7 +423,7 @@
                 </p>
                 <img src="./images/22.jpg" alt="">
                 <p class="text-lg text-center p-3">The world’s most powerful all-in-one audio solution for content creators is now available worldwide.v</p>
-                <a href="#" class="px-4 mt-6 py-2 text-[10px] mb-4 whitespace-nowrap md:text-xl bg-[#ad9970] text-white rounded-full uppercase">learn
+                <a href="#" class="px-4 mt-6 py-2 text-md mb-4 whitespace-nowrap md:text-xl bg-[#ad9970] text-white rounded-full uppercase">learn
                     more</a>
             </div>
 
